Code Deploy/wordpress/app.ingress-wordpress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
  name: wordpress.nttung.com
spec:
  ingressClassName: nginx-wordpress
  rules:
  - host: wordpress.nttung.com
    http:
      paths:
      - backend:
          service:
            name: wordpress-service
            port:
              number: 80
        path: /
        pathType: Prefix
